--- a/src/app/pages/taller/taller.page.html
+++ b/src/app/pages/taller/taller.page.html
@@ -44,7 +44,7 @@
                 </ion-card>
             </ion-item>
             <ion-item-options>
-                <ion-item-option (click)="updateData(caso.id)" color="success">Update</ion-item-option>
+                <!-- <ion-item-option (click)="updateData(caso.id)" color="success">Update</ion-item-option> -->
                 <ion-item-option (click)="delData(caso.id)" color="danger">Delete</ion-item-option>
             </ion-item-options>
         </ion-item-sliding>
