--- a/src/app/pages/addcomputador/addcomputador.page.html
+++ b/src/app/pages/addcomputador/addcomputador.page.html
@@ -43,14 +43,14 @@
                 <ion-input></ion-input>
             </ion-item>
 
-            <ion-list>
+            <!-- <ion-list>
                 <ion-item>
                     <ion-label>Técnico:</ion-label>
                     <ion-select [compareWith]="compareWith">
                         <ion-select-option *ngFor="let user of users" [value]="user">{{user.first + ' ' + user.last}}</ion-select-option>
                     </ion-select>
                 </ion-item>
-            </ion-list>
+            </ion-list> -->
 
             <ion-item>
                 <ion-label position="floating">Trabajo a realizar:</ion-label>
