--- a/src/app/pages/addvehiculo/addvehiculo.page.html
+++ b/src/app/pages/addvehiculo/addvehiculo.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-card>
+    <!-- <ion-card>
         <ion-card-content>
             <ion-item>
                 <ion-label position="floating">Cédula:</ion-label>
@@ -75,5 +75,5 @@
             <ion-button expand="full" color="primary">Guardar</ion-button>
 
         </ion-card-content>
-    </ion-card>
+    </ion-card> -->
 </ion-content>
