--- a/src/app/pages/contabilidad/contabilidad.page.html
+++ b/src/app/pages/contabilidad/contabilidad.page.html
@@ -24,10 +24,10 @@
 
     <ion-list></ion-list>
 
-    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <!-- <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
         <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
         </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
+    </ion-infinite-scroll> -->
 
     <!-- <ion-list>
         <ion-item-sliding>
